syntax = "proto3";

option java_multiple_files = true;
option java_package = "am.adrian.grpcdemo2.model";

message Account {
  string account_number = 1;
  int32 balance = 2;
}

message TransferRequest {
  string from_account = 1;
  string to_account = 2;
  int32 amount = 3;
}

message TransferResponse {
  TransferStatus status = 1;
  repeated Account accounts = 2;
}

enum TransferStatus {
  FAILED = 0;
  SUCCESSFUL = 1;
}

service TransferService {
  rpc transfer(stream TransferRequest) returns (stream TransferResponse);
}
